Add realclean, quick, deps to make

--- a/rebar.config
+++ b/rebar.config
@@ -1,7 +1,7 @@
-%% {deps, [
-%%        {meck, "0.7.1", {git, "git://github.com/eproxus/meck.git", {tag, "0.7.1"}}},
-%%        {erlcloud, ".*", {git, "git://github.com/gleber/erlcloud.git", {branch, "master"}}}
-%%       ]}.
+{deps, [
+        {meck, "0.7.1", {git, "git://github.com/eproxus/meck.git", {tag, "0.7.1"}}},
+        {erlcloud, ".*", {git, "git://github.com/gleber/erlcloud.git", {branch, "master"}}}
+       ]}.
 
 {sub_dirs, ["apps/lastock", "rel"]}.
 {erl_opts, [debug_info, warnings_as_errors]}.
